# File-Count

./: .gitignore  CMakeLists.txt  directory.hpp  main.cpp
include/: app.hpp  directory.hpp  file.hpp  main.hpp
source/: app.cpp  directory.cpp  file.cpp  main.cpp
